--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  --app-bg : #011627;
+  --app-line: #1E2D3D;
+  background-color: var(--app-bg);
+}
+
+body{
+  height: calc(100vh - 40px);
+  max-height: calc(100vh - 40px);
+  border: solid 1px var(--app-line);
+  border-radius: 8px;
+  margin: 20px;
+}
+
+
+
